# larky

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  main.py  pyproject.toml  qq_main.py  unified_main.py  wechat_main.py
examples/: trading_bot_btc.py  trading_bot_eth.py  trading_bot_unified.py
larky/: __init__.py  __main__.py  _email.py  bot.py  config.py  handlers.py  models.py  qq_bot.py  qq_config.py  qq_models.py  service.py  unified.py  wechat_bot.py  wechat_config.py  wechat_models.py  wechat_service.py
tests/: test_unified.py  test_wechat_core.py  test_wechat_priority.py
